--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
           </div>
           <div class="col-md-6 analysis" name="analysis">
             <form style="margin-left: 10px;">
+              <div class="form-inline" id="pitchNum">
+                <a class="btn btn-success" id="highPitch">High Pitch</a>
+                <a class="btn btn-danger" id="lowPitch">Low Pitch</a>
+                <a class="btn btn-primary" id="baseline">Baseline Average</a>
+              </div>
               <div class="form-inline">
                 <span class="label">Start time (mm:ss): </span>
                 <input type="text" class="form-control" id="start" size="4">
