graph using correct standard deviation

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           <div class="col-md-6 analysis" name="analysis">
             <form style="margin-left: 10px;">
               <div class="form-inline" id="pitchNum">
-                <a class="btn btn-success" id="highPitch">High Pitch</a>
+                <a class="btn btn-primary" id="highPitch">High Pitch</a>
                 <a class="btn btn-danger" id="lowPitch">Low Pitch</a>
-                <a class="btn btn-primary" id="baseline">Baseline Average</a>
+                <a class="btn btn-success" id="baseline">Baseline Average</a>
               </div>
               <div class="form-inline">
                 <span class="label">Start time (mm:ss): </span>
