updated pitch calculation to 0.25 and fixed text colour

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
               </form>
             </div>
             <h2>Transcript</h2>
-            <div id="textColour"></div>
-            <div id="transcriptdiv" class="ScrollStyle"></div>
+              <a id="textColour"></a>
+              <div id="transcriptdiv" class="ScrollStyle"></div>
           </div>
           <div class="col-md-7">
             <h1>Think-Aloud Analysis Tool</h1>
